<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome">Welcome to</string>
    <string name="quiz">Quiz</string>
    <string name="name">Enter your name</string>
    <string name="Basic">Basic</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Advanced">Advanced</string>
    <string name="check_right_answers">Check right answers :</string>
    <string name="choose_one">Choose one right answer :</string>
    <string name="type_in">Type in the right answer :</string>
    <string name="button_submit">submit</string>
    <string name="button_reset">reset</string>
    <string name="Q1">Q1. What can go within the html tags</string>
    <string name="Q2">Q2. What can go within the head tags</string>
    <string name="Q3">Q3. What can go within the body tags</string>
    <string name="Q4">Q4.Who is making the Web standards?</string>
    <string name="Q4RA">The World Wide Web Consortium</string>
    <string name="Q5">Q5. Choose the correct HTML element for the largest heading:</string>
    <string name="Q5RA">h1</string>
    <string name="Q6">Q6. The HTML canvas element is used to:</string>
    <string name="Q6RA">draw graphics</string>
    <string name="Q7">Q7. What does HTML stand for?</string>
    <string name="Q7RA">Hyper Text Markup Language</string>
    <string name="Q8">Q8. Which DOCTYPE is correct for HTML5?</string>
    <string name="Q8RA">DOCTYPE html</string>
    <string name="Q9">Q9. Graphics defined by SVG is in which format?</string>
    <string name="Q9RA">XML</string>
    <string name="Q10">Q10. What\'\s the HTML element to define important text</string>
    <string name="Q10RA">strong</string>
    <string name="Q1A1">p elements</string>
    <string name="Q1A2">head element</string>
    <string name="Q1A3">section element </string>
    <string name="Q1A4">This is mp3 </string>
    <string name="Q2A1">title element</string>
    <string name="Q2A2">html element</string>
    <string name="Q2A3">h1 element </string>
    <string name="Q2A4">contains meta information about the document </string>
    <string name="Q3A1">p1 element</string>
    <string name="Q3A2">html element</string>
    <string name="Q3A3">h1 element</string>
    <string name="Q3A4">contains the visible page content </string>
    <string name="Q4A1">Microsoft</string>
    <string name="Q4A2">Google</string>
    <string name="Q4A3">The World Wide Web Consortium</string>
    <string name="Q4A4">Facebook</string>
    <string name="Q5A1">h1</string>
    <string name="Q5A2">heading</string>
    <string name="Q5A3">head</string>
    <string name="Q5A4">h6</string>
    <string name="Q6A1">display database records</string>
    <string name="Q6A2">draw graphics</string>
    <string name="Q6A3">manipulate data in MySQL</string>
    <string name="Q6A4">create draggable elements</string>
    <string name="Q7_8_9_10A">type in the right answer</string>
    <string name="Toast">YOUR RESULT \n </string>
</resources>
